
    o Add function 'xPCHiCplot' for visualising promoter capture Hi-C datasets

    o Add function 'xBiproject' for bigraph projection
    
    o Add functions ('xRWenricher' and 'xRWkernel') for network enrichment analysis


CHANGES IN VERSION 1.1.3
-----------------------

NEW FEATURES

    o Populate annotations
    
    o Fix bugs in the function 'xGRviaGenomicAnno' (disabling OR calculation)
    
    o Add function 'xEnrichHeatmap' for visualising enrichment results in a heatmap
    
    o Add functions ('xGRoverlap' and 'xGRtrack') enabling extraction and analysis of genomic scores
    

CHANGES IN VERSION 1.1.2
-----------------------

NEW FEATURES

    o Populate annotations
    
    o Fix bugs in the functions 'xEnrichConciser' and 'xEnrichForest'

    o Modify functions ('xEnricher', 'xEnricherGenes', 'xEnricherSNPs', 'xEnricherYours', 'xEnricherGenesAdv', 'xGRviaGeneAnno' and 'xGRviaGeneAnnoAdv') enabling the control of, adding 'background.annotatable.only', how to use the test background 

    o Add functions ('xGR2xGeneAnno' and 'xGR2xGeneAnnoAdv') supporting genomic region-based enrichment analysis using the crosslinked gene annotations
    
    o Add a new function 'xEnrichTreemap' for visualising enrichment results in a treemap
    
    o Add a new function 'xCrosstalk' for active pathway crosstalk identification
    
    o Add new functions ('xGRsort', 'xGRsep' and 'xGRcse') for genomic range operations

    o Add a new function 'xEnrichLadder' for ladder-like plot of enrichment results


CHANGES IN VERSION 1.1.1
-----------------------

NEW FEATURES

    o Modify functions ('xEnricher', 'xEnricherGenes', 'xEnricherSNPs', 'xEnricherYours', 'xGRviaGenomicAnno') enabling two-side p-value calculation and inclusion of odds ratio (confidence intervals)

    o Add a new function 'xEnricherGenesAdv' for conducting enrichment analysis given a list of gene sets and a list of ontologies
    