@@ -2,7 +2,7 @@ Package: XGR
 Type: Package
 Title: Exploring Genomic Relations for Enhanced Interpretation Through Enrichment, Similarity, Network and Annotation Analysis
 Version: 1.1.4
-Date: 2018-6-4
+Date: 2018-7-2
 Author: Hai Fang, Bogdan Knezevic, Katie L Burnham, Julian C Knight
 Maintainer: Hai Fang <hfang@well.ox.ac.uk>
 Depends: R (>= 3.1.0), igraph, dnet, ggplot2
@@ -117,5 +117,6 @@ Collate:
     'xRWkernel.r'
     'xRWenricher.r'
     'xGRkaryogram.r'
+    'xRepurpose.r'
 License: GPL-2
 biocViews: Bioinformatics
