@@ -1,11 +1,13 @@
 # Generated by roxygen2: do not edit by hand
 
+S3method(print,DR)
 S3method(print,aOnto)
 S3method(print,bLD)
 S3method(print,cPath)
 S3method(print,eTerm)
 S3method(print,ls_eTerm)
 S3method(print,mSeed)
+export(DR)
 export(aOnto)
 export(bLD)
 export(cPath)
@@ -94,6 +96,7 @@ export(xRWkernel)
 export(xRd2HTML)
 export(xRdWrap)
 export(xRegress)
+export(xRepurpose)
 export(xSM2DF)
 export(xSNP2GeneScores)
 export(xSNP2nGenes)
