@@ -1,0 +1,74 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>R: Definition for S3 class 'DR'</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link rel="stylesheet" type="text/css" href="R.css" />
+</head><body>
+
+<table width="100%" summary="page for DR"><tr><td>DR</td><td style="text-align: right;">R Documentation</td></tr></table>
+
+<h2>Definition for S3 class <code>DR</code></h2>
+
+<h3>Description</h3>
+
+<p><code>DR</code> has 3 components: df, index, gp.
+</p>
+
+
+<h3>Usage</h3>
+
+<pre>
+DR(df, index, gp)
+
+## S3 method for class 'DR'
+print(x, ...)
+</pre>
+
+
+<h3>Arguments</h3>
+
+<table summary="R argblock">
+<tr valign="top"><td><code>df</code></td>
+<td>
+<p>a data frame</p>
+</td></tr>
+<tr valign="top"><td><code>index</code></td>
+<td>
+<p>a data frame</p>
+</td></tr>
+<tr valign="top"><td><code>gp</code></td>
+<td>
+<p>a ggplot object</p>
+</td></tr>
+<tr valign="top"><td><code>x</code></td>
+<td>
+<p>an object of class <code>DR</code></p>
+</td></tr>
+<tr valign="top"><td><code>...</code></td>
+<td>
+<p>other parameters</p>
+</td></tr>
+</table>
+
+
+<h3>Value</h3>
+
+<p>an object of S3 class <code>DR</code>
+</p>
+
+
+<h3>Examples</h3>
+
+<pre>
+## Not run: 
+# Load the library
+library(XGR)
+
+## End(Not run)
+RData.location &lt;- "http://galahad.well.ox.ac.uk/bigdata"
+## Not run: 
+DR(df, index, gp)
+
+## End(Not run)
+</pre>
+
+
+</body></html>
