@@ -1,0 +1,127 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>R: Function to obtain repurposing matrix</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link rel="stylesheet" type="text/css" href="R.css" />
+</head><body>
+
+<table width="100%" summary="page for xRepurpose"><tr><td>xRepurpose</td><td style="text-align: right;">R Documentation</td></tr></table>
+
+<h2>Function to obtain repurposing matrix</h2>
+
+<h3>Description</h3>
+
+<p><code>xRepurpose</code> is supposed to obtain repurposing matrix given a
+query list of genes. It returns an object of the class 'DR'.
+</p>
+
+
+<h3>Usage</h3>
+
+<pre>
+xRepurpose(data, phase.min = 3, target.max = 5, plot = TRUE,
+verbose = T, RData.location = "http://galahad.well.ox.ac.uk/bigdata",
+...)
+</pre>
+
+
+<h3>Arguments</h3>
+
+<table summary="R argblock">
+<tr valign="top"><td><code>data</code></td>
+<td>
+<p>an input vector containing gene symbols</p>
+</td></tr>
+<tr valign="top"><td><code>phase.min</code></td>
+<td>
+<p>the minumum phase of drugs allowed. By default it is 3
+defining target genes of drugs reaching development phase 3 and above</p>
+</td></tr>
+<tr valign="top"><td><code>target.max</code></td>
+<td>
+<p>the maximum number of targets per drug allowed. By
+default it is 5. It is used to define non-promoscuous drug target
+genes</p>
+</td></tr>
+<tr valign="top"><td><code>plot</code></td>
+<td>
+<p>logical to indicate whether heatmap plot is drawn</p>
+</td></tr>
+<tr valign="top"><td><code>verbose</code></td>
+<td>
+<p>logical to indicate whether the messages will be
+displayed in the screen. By default, it sets to true for display</p>
+</td></tr>
+<tr valign="top"><td><code>RData.location</code></td>
+<td>
+<p>the characters to tell the location of built-in
+RData files. See <code>xRDataLoader</code> for details</p>
+</td></tr>
+<tr valign="top"><td><code>...</code></td>
+<td>
+<p>additional graphic parameters for xHeatmap</p>
+</td></tr>
+</table>
+
+
+<h3>Value</h3>
+
+<p>an object of class &quot;DR&quot;, a list with following components:
+</p>
+
+<ul>
+<li><p><code>df</code>: a data frame of n x 5, where the 5 columns are
+&quot;Target&quot;, &quot;Disease&quot;, &quot;Phase&quot;, &quot;Drug&quot;, &quot;Drug_index&quot;
+</p>
+</li>
+<li><p><code>index</code>: a data frame of n x 2, where the 2 columns are
+&quot;Drug_index&quot;, &quot;Drug&quot;
+</p>
+</li>
+<li><p><code>gp</code>: NULL if the plot is not drawn; otherwise, a 'ggplot'
+object
+</p>
+</li></ul>
+
+
+
+<h3>Note</h3>
+
+<p>none
+</p>
+
+
+<h3>See Also</h3>
+
+<p><code>xRDataLoader</code>, <code>xHeatmap</code>
+</p>
+
+
+<h3>Examples</h3>
+
+<pre>
+## Not run: 
+# Load the library
+library(XGR)
+RData.location &lt;- "http://galahad.well.ox.ac.uk/bigdata/"
+
+# a) provide the input Genes of interest (eg 1000 randomly chosen human genes)
+## load human genes
+org.Hs.eg &lt;- xRDataLoader(RData='org.Hs.eg',
+RData.location=RData.location)
+set.seed(825)
+data &lt;- as.character(sample(org.Hs.eg$gene_info$Symbol, 1000))
+
+# b) obtain repurposing matrix
+DR &lt;- xRepurpose(data, RData.location=RData.location, reorder="none",
+colormap="ggplot2.top", zlim=c(1,4), na.color='transparent',
+label.size=1.5, label.color="white")
+DR$gp
+write.table(DR$df, file="xRepurpose.txt", sep="\t", row.names=F,
+quote=F)
+write.table(DR$index, file="xRepurpose_index.txt", sep="\t",
+row.names=F, quote=F)
+
+## End(Not run)
+</pre>
+
+
+</body></html>
