@@ -8,7 +8,8 @@ xEnrichLadder(eTerm, sortBy = c("or", "adjp", "fdr", "pvalue",
 "zscore", "fc",
 "nAnno", "nOverlap", "none"), top_num = 10, FDR.cutoff = 0.05,
 CI.one = T, colormap = "skyblue-darkblue", x.rotate = 60,
-x.text.size = 6, y.text.size = 6, shape = 19, size = 2, verbose = T)
+x.text.size = 6, y.text.size = 6, shape = 19, size = 2,
+label = c("concise", "full"), verbose = T)
 }
 \arguments{
 \item{eTerm}{an object of class "eTerm"}
@@ -53,6 +54,9 @@ it is 6}
 \item{shape}{the number specifying the shape. By default, it is 19}
 
 \item{size}{the number specifying the shape size. By default, it is 2}
+
+\item{label}{how to label gene sets (terms). It can be "concise" or
+"full"}
 
 \item{verbose}{logical to indicate whether the messages will be
 displayed in the screen}
